Let us say that I suggest you may be human.
I must not fear. Fear is the mindkiller.
You take a lot on yourselves.
He felt an offense against what his mother called his instinct for rightness.
Observe the plans within plans within plans.
If there were a thing to be done for him, we'd have done it.
She asked me to tell her what it is to rule, and I said that one commands. And she said I had some unlearning to do.
A process cannot be understood by stopping it.
Knowing where the trap is - that's the first step in evading it.
The mind commands the body and it obeys. The mind orders itself and meets resistance.
Delay is as dangerous as the wrong answer.
He learned rapidly because his first training was in how to learn. And the first lesson of all was the basic trust that he could learn.
Any road followed precisely to its end leads precisely nowhere. Climb the mountain just a little bit to test that it's a mountain. From the top of the mountain, you cannot see the mountain.
I'm doing a hateful thing, but I must.
How would they know if we didn't tell them?
You never talk of likelihoods on Arrakis. You speak only of possibilities.
The drowning man who climbs on your shoulders to save himself is understandable - except when you see it happen in the drawing room.
I was handling it correctly. Why do they interfere?
Is it defeatist or treacherous for a doctor to diagnose a disease correctly? My only intention is to cure the disease.
But he felt nothing except: here's an important fact.
He felt the inability to grieve as a terrible flaw.
When I say totally, I mean without reservation. I would give my life for you.
What do you despise? By this you are truly known.
Whether a thought is spoken or not it is a real thing and it has power.
I have little to do with how you'll meet tomorrow. I can only help you meet today.
When in doubt of your surface, bare feet are best.
The meeting between ignorance and knowledge, between brutality and culture - it begins with how we treat our dead.
Deep in the human unconscious is a pervasive need for a logical universe that makes sense. But the real universe is always one step beyond logic.
Choose the course of happiness. Defy everyone and everything to do this. But choose your own course.
Let us think of this as a misunderstanding between friends. It's over and we can be thankful we'll never again have that sort of misunderstanding between us.
He who can destroy a thing has the real control of it.
The test of a man isn't what you think he'll do. It's what he actually does.
They, gifted with limited prescience, had made the fatal decision: they'd chosen always the clear, safe course that leads ever downward into stagnation.
